networkpolicy/networkpolicy-namespace/pod-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
  namespace: my-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
      - name: my-nginx
        image: dockerproxy.net/library/nginx:1.23.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-test-1
  namespace: pod-test-1
  labels:
    app: pod-test-1
spec:
  containers:
  - name: pod-test-1
    image: hub.c.163.com/library/busybox:latest
    command: [ "sh", "-c", "sleep 36000"]
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-test-2
  namespace: pod-test-2
spec:
  containers:
  - name: pod-test-2
    image: hub.c.163.com/library/busybox:latest
    command: [ "sh", "-c", "sleep 36000"]
